# WxRADNet-PyTorch

./: .gitattributes  .gitignore  README.md  pyproject.toml
config/: ab_points.pkl  timestamps.pkl
human_pathfinding_experiment/: README.md  docker-compose.yml
human_pathfinding_experiment/backend/: Dockerfile  pyproject.toml
human_pathfinding_experiment/backend/app/: config.py  main.py
human_pathfinding_experiment/backend/app/routers/: ab_points.py  obstacles.py  results.py  timestamps.py
human_pathfinding_experiment/backend/app/schemas/: experiment.py  requests.py  responses.py
human_pathfinding_experiment/backend/app/services/: data_service.py  geometry_service.py  validation_service.py
human_pathfinding_experiment/frontend/: Dockerfile  index.html  package.json
notebooks/: baseline-wxradnet.ipynb  conv-gru-seq2seq.ipynb  conv-lstm-seq2seq.ipynb  conv-rnn-seq2seq.ipynb  rnn-seq2seq.ipynb
notebooks/results/: ConvGRU_test_losses.npy  ConvGRU_train_losses.npy  ConvLSTM_test_losses.npy  ConvLSTM_train_losses.npy  ConvRNN_test_losses.npy  ConvRNN_train_losses.npy  GRU_test_losses.npy  GRU_train_losses.npy  LSTM_test_losses.npy  LSTM_train_losses.npy  RNN_test_losses.npy  RNN_train_losses.npy
parser/: parser.py  progress.json
thund_avoider/: dynamic_avoider.py  parser.py  settings.py  static_avoider.py
thund_avoider/models/: conv_gru.py  conv_lstm.py  conv_rnn.py  rnn.py
thund_avoider/parser/: parser.py
thund_avoider/schemas/: dynamic_avoider.py  masked_dynamic_avoider.py  predictor.py  preprocessor.py
thund_avoider/scripts/: make_report.py  run_dynamic_avoider.py  run_masked_dynamic_avoider.py  run_parser.py  run_preprocessor.py  run_static_avoider.py  utils.py
thund_avoider/services/: preprocessor.py  (+3 more)
(+49 files in other folders)
