[project]
name = "wxradnet-pytorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geopandas>=1.1.2",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
    "pyproj>=3.7.2",
    "rasterio>=1.4.4",
    "scipy>=1.17.0",
    "shapely>=2.1.2",
    "torch==2.2.2",
    "wakepy>=0.10.2.post1",
]
