[project]
name = "wxradnet-pytorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "boto3>=1.42.51",
    "concave-hull>=0.1.2",
    "geopandas>=1.1.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=1.26.4,<2.0.0",
    "opencv-python>=4.9.0.80,<4.11.0",
    "pandas>=3.0.0",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "pyproj==3.6.1",
    "pytest>=9.0.2",
    "rasterio==1.3.10",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "torch==2.2.2",
    "wakepy>=0.10.2.post1",
]
