[project]
name = "human-pathfinding-experiment"
version = "0.1.0"
description = "Human pathfinding experiment web application backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "geopandas>=1.0.0",
    "shapely>=2.0.0",
    "pyarrow>=18.0.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
